# dash

./: .clang-format  .clang-tidy  .codecov.yml  .codedocs  .gitconfig  .gitignore  .gitmodules  .syntastic_c  .syntastic_cpp  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.md  LICENSE  README  README.md  build-dev.sh  build.analyze.sh  build.cov.sh  build.debug.sh  build.dev.sh  build.mic.sh  build.minimal.sh  build.must.sh  build.nasty.sh  build.sh  circle.yml  custom.build.bench.sh  dash.kdev4  env_check.mk  makefile  mkdocs.yml  my_build.sh  project.mk  release.pl  set_env.sh  static_lib.mk
dart-impl/: CMakeLists.txt  src_gaspi_and_mpi.tar.xz
dart-impl/base/: CMakeLists.txt
dart-impl/base/src/: allocator.c  array.c  domain_map.c  dummy.cc  env.c  hwinfo.c  locality.c  logging.c  logging.cc  netinfo.c  pmem.c  string.c  tasking.c
dart-impl/benchmark/: bench.h
dart-impl/benchmark/dart_gaspi_get_blocking/: Makefile  main.c
dart-impl/benchmark/dart_mpi_get_blocking/: Makefile  main.c
dart-impl/benchmark/gaspi_get_blocking/: Makefile  main.c
dart-impl/benchmark/get_blocking/: Makefile  main.c
dart-impl/gaspi/: CMakeLists.txt  Makefile  changelog.txt  cmake_install.cmake  make.defs
dart-impl/gaspi/dart-gaspi/: Makefile  dart_communication.c  dart_communication_priv.c  dart_communication_priv.h  dart_gaspi.h  dart_globmem.c  dart_globmem.h  dart_globmem_priv.h  dart_group_impl.c  dart_group_impl.h  dart_initialization.c  dart_initialization.h  dart_mem.c  dart_mem.h  dart_seg_stack.c  dart_seg_stack.h  dart_synchronization.c  dart_synchronization.h  dart_synchronization_priv.h  dart_team_group.c  dart_team_private.c  dart_team_private.h  dart_translation.c  dart_translation.h  gaspi_utils.c  gaspi_utils.h  handle_queue.c  handle_queue.h
dart-impl/gaspi/src/: _clang-format  dart_allocator.c  dart_communication.c  dart_communication_priv.c  dart_config.c  dart_gaspi_types.c  dart_globmem.c  dart_group_impl.c  dart_initialization.c  dart_locality.c  dart_mem.c  dart_seg_stack.c  dart_synchronization.c  dart_team_group.c  dart_team_private.c  dart_translation.c  gaspi_utils.c  handle_queue.c  rbtree.c
dart-impl/gaspi/test/: CMakeLists.txt  Makefile_c  test.h
dart-impl/mpi/: CMakeLists.txt  Makefile  Makefile.mpi  README  README.dart-mpi  dart-config.cmake.in  dart_mem.c.dump  make.defs  make.defs-hermit  makefile
dart-impl/mpi.old/: make.defs  makefile
dart-impl/mpi.old/dart-mpi/: dart_core_globmem.c  dart_core_initialization.c  dart_core_team_group.c
dart-impl/mpi.old/test/: test_onesided.c
dart-impl/mpi/dart-mpi/: Makefile  dart_adapt_communication.c  dart_adapt_communication.h  dart_adapt_globmem.c  dart_adapt_globmem.h  dart_adapt_initialization.c  dart_adapt_initialization.h  dart_adapt_mem.c  dart_adapt_mem.h  dart_adapt_synchronization.c  dart_adapt_synchronization.h  dart_adapt_synchronization_priv.h  dart_adapt_team_group.c  dart_adapt_team_group.h  dart_adapt_team_private.c  dart_adapt_teamnode.h  dart_adapt_translation.c  dart_adapt_translation.h  dart_communication.c  dart_communication_old.c  dart_communication_priv.h  dart_core_communication.c  dart_core_globmem.c  dart_core_initialization.c  dart_core_synchronization.c  dart_core_team_group.c  dart_globmem.c  dart_globmem_priv.h  dart_group_priv.h  dart_initialization.c  dart_mem.c  dart_mem.h  dart_mem.h.dump  dart_synchronization.c  dart_synchronization.h  dart_synchronization_priv.h  dart_team_group.c  dart_team_private.c  dart_team_private.h  dart_teamnode.h  (+4 more)
dart-impl/mpi/src/: Makefile  dart_active_messages.c  dart_active_messages_nolock.c  dart_active_messages_sendrecv.c  dart_active_messages_sendrecv_pt.c  dart_active_messages_singlewin.c  dart_active_messages_twowin.c  dart_allocator.c  dart_communication.c  dart_globmem.c  dart_initialization.c  dart_io_hdf5.c  dart_locality.c  dart_locality_priv.c  dart_mem.c  dart_mpi_op.c  dart_mpi_serialization.c  dart_mpi_types.c  dart_pmem.c  dart_segment.c  dart_synchronization.c  dart_team_group.c  dart_team_private.c  dart_topology.c  (+2 more)
dart-impl/mpiprog/: CMakeLists.txt  Makefile  make.defs
dart-impl/shmem/: CMakeLists.txt  Makefile  make.defs
dart-impl/shmem.old/: makefile  makefile~
dart-impl/spec/: Makefile
dart-impl/tasking/: CMakeLists.txt
dash/: CMakeLists.txt  Makefile  dash-config.cmake.in  dash.kdev4  make.defs
dash/bench/: Makefile
dash/dash-bench/: Makefile_cpp  Makefile_cpp~  bench.h  bench.h~
dash/dash-lib/: .cproject  .project  Array.h  BlockedDist.h  Cart.h  Cartesian.h  Debug.h  Enums.cpp  Enums.h  GlobIter.h  GlobMem.h  GlobPtr.h  GlobRef.h  HView.h  Init.cpp  Init.h  Makefile  Matrix.h  MemAccess.h  Pattern.cpp  Pattern.h  Pattern1D.h  Shared.h  SymmetricAlignedAccess.h  Team.cpp  Team.h  Types.h  View.h  libdash.h  main.cpp
dash/dash-test/: Makefile_cpp
dash/examples/: CMakeLists.txt  Makefile  Makefile_cpp  locality_utils.h  pattern_params.h  util.h
dash/include/: libdash.h
dash/scripts/: dash-ci-deploy.sh  dash-ci-run.sh  dash-ci.sh  dash-post-commit.sh  dash-test-all-single.sh  dash-test.sh
dash/src/: Array.impl.cc.new  Distribution.cc  Enums.cc  GlobPtr.cc  HDF5OutputStream.cc  Init.cc  Logging.cc  Makefile  Math.cc  Matrix.impl.cc.new  Mutex.cc  StreamConversion.cc  Team.cc  TypeInfo.cc  Types.cc
dash/test/: AccumulateTest.cc  AccumulateTest.h  ArrayLargeStructTest.cc  ArrayLargeStructTest.h  ArrayTest.cc  ArrayTest.h  ArrayTestLocal.cc  ArrayTestLocal.h  AtomicTest.cc  AtomicTest.h  AutobalanceTest.cc  AutobalanceTest.h  BlockPatternTest.cc  BlockPatternTest.h  CMakeLists.txt  CSRPatternTest.cc  CSRPatternTest.h  CartesianTest.cc  CartesianTest.h  CoArrayTest.cc  CoArrayTest.h  CollectiveAllocatorTest.cc  CollectiveAllocatorTest.h  ConfigTest.cc  ConfigTest.h  ConstexprTest.cc  ConstexprTest.h  CopyTest.cc  CopyTest.h  DARTCollectiveTest.cc  DARTCollectiveTest.h  DARTLocalityTest.cc  DARTLocalityTest.h  DARTMemAllocTest.cc  DARTMemAllocTest.h  DARTOnesidedTest.cc  DARTOnesidedTest.h  DARTTaskingTest.cc  DARTTaskingTest.h  DistributedLoggerTest.cc  (+100 more)
(+1664 files in other folders)
