
set(DART_IMPLEMENTATIONS_LIST ${DART_IMPLEMENTATIONS_LIST}
    PARENT_SCOPE)
set(ENABLE_THREADSUPPORT ${ENABLE_THREADSUPPORT}
    PARENT_SCOPE)


if (ENABLE_THREADSUPPORT)
  set(CMAKE_C_FLAGS
      "${CMAKE_C_FLAGS} -DDART_ENABLE_THREADSUPPORT")
  set(CMAKE_CXX_FLAGS
      "${CMAKE_CXX_FLAGS} -DDART_ENABLE_THREADSUPPORT")
endif ()

# DART base:
add_subdirectory(base)

# DART implementation of every enabled DART variant:
if (";${DART_IMPLEMENTATIONS_LIST};" MATCHES ";mpi;")
  set(DART_IMPLEMENTATION_MPI_ENABLED ON
      CACHE BOOL INTERNAL FORCE)
  include(${CMAKE_SOURCE_DIR}/CMakeExt/MPI.cmake)
  add_subdirectory(mpi)
endif()

if (";${DART_IMPLEMENTATIONS_LIST};" MATCHES ";shmem;")
  set(DART_IMPLEMENTATION_SHMEM_ENABLED ON
      CACHE BOOL INTERNAL FORCE)
  add_subdirectory(shmem)
endif()
